--- a/deployment/docker/foundry.core-compose.yml
+++ b/deployment/docker/foundry.core-compose.yml
@@ -86,7 +86,7 @@ services:
       - rabbitmq
       - elasticsearch
       - kibana
-    image: truecommerce/foundry.core.security.microservice:2.5.0.rc6
+    image: truecommerce/foundry.core.security.microservice:2.5.0.rc6_1
     restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
