--- a/deployment/docker/foundry.core-compose.yml
+++ b/deployment/docker/foundry.core-compose.yml
@@ -132,7 +132,7 @@ services:
     #volumes:
     #- <certificate folder path>:/https/
     expose:
-      - "8080"
+      - "80"
     # healthcheck:
     #   start_period: 30s
     #   interval: 1m30s
@@ -164,7 +164,7 @@ services:
       #elasticsearch
       - Logging__Elasticsearch__nodeUris=http://elasticsearch:9200
     expose:
-      - "8080"
+      - "80"
     # healthcheck:
     #   start_period: 30s
     #   interval: 1m30s
@@ -196,7 +196,7 @@ services:
       #elasticsearch
       - Logging__Elasticsearch__nodeUris=http://elasticsearch:9200
     expose:
-      - "8080"
+      - "80"
 
   foundry.core.apigateway.microservice:
     depends_on:
@@ -207,11 +207,11 @@ services:
     restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ReverseProxy__Clusters__security_microservice__Destinations__security_microservice_destination1__Address=http://foundry_core_security_microservice:8080
-      - ReverseProxy__Clusters__sync_microservice__Destinations__sync_microservice_destination1__Address=http://foundry_core_sync_microservice:8080
-      - ReverseProxy__Clusters__configuration_microservice__Destinations__configuration_microservice_destination1__Address=http://foundry_core_configuration_microservice:8080
+      - ReverseProxy__Clusters__security_microservice__Destinations__security_microservice_destination1__Address=http://foundry_core_security_microservice
+      - ReverseProxy__Clusters__sync_microservice__Destinations__sync_microservice_destination1__Address=http://foundry_core_sync_microservice
+      - ReverseProxy__Clusters__configuration_microservice__Destinations__configuration_microservice_destination1__Address=http://foundry_core_configuration_microservice
     ports:
-      - "30100:8080"
+      - "30100:80"
 
 volumes:
   esdata:
